# SnakeProject

Sn/: CMakeLists.txt
Sn/Sn/: CMakeLists.txt  Fruit.cpp  Fruit.h  Main.cpp  Main.h  PlayerAi.cpp  PlayerAi.h  Position.h  Score.cpp  Score.h  Snake.cpp  Snake.h
Sn/Tests/: PlayerAiTests.cpp  SnakeTest.cpp
Sn/docs/html/: _fruit_8h_source.html  _main_8h_source.html  _player_ai_8h_source.html  _position_8h_source.html  _score_8h_source.html  _snake_8h_source.html  annotated.html  class_fruit-members.html  class_fruit.html  class_player_ai-members.html  class_player_ai.html  class_score-members.html  class_score.html  class_snake-members.html  class_snake.html  classes.html  files.html  functions.html  functions_func.html  index.html  struct_position-members.html  struct_position.html
Sn/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
Sn/docs/latex/: annotated.tex  class_fruit.tex  class_player_ai.tex  class_score.tex  class_snake.tex  refman.tex  struct_position.tex
